# pytest-ampel-core

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml  main.yml
src/pytest_ampel/: plugin.py
src/pytest_ampel/test-data/: testing-config.yaml
tests/: test_ampel.py
