[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-ampel-core"
description = "A plugin to provide AmpelContext fixtures in pytest"
version = "0.10.0a0"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
]
maintainers = [
    { name = "Jakob van Santen", email = "jakob.van.santen@desy.de" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "pytest>=6.2.0",
]
[project.urls]
Repository = "https://github.com/jvansanten/pytest-ampel-core"
[project.entry-points.pytest11]
ampel-core = "pytest_ampel.plugin"
